cluster/core/traefik-crds/grafana-ingressroutes.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: grafana-https-ingressroute
  namespace: traefik
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-dns01-production-do"
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`grafana.${SECRET_DIGITALOCEAN_DOMAIN_02}`)
      kind: Rule
      # middlewares:
      #   - name: grafana-middleware-headers
      services:
        - name: monitoring-grafana
          namespace: monitoring
          port: 80
  tls:
    secretName: "${SECRET_DOMAIN/./-}-tls"
